Update project target and labelling.

--- a/Examples/fido2/Sources/Base.lproj/Main.storyboard
+++ b/Examples/fido2/Sources/Base.lproj/Main.storyboard
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="l9G-bJ-S1B">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21507" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="l9G-bJ-S1B">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21505"/>
         <capability name="Image references" minToolsVersion="12.0"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
@@ -19,7 +20,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="kv9-NN-ch8">
-                                <rect key="frame" x="0.0" y="68" width="414" height="794"/>
+                                <rect key="frame" x="0.0" y="72" width="414" height="790"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" baselineRelativeArrangement="YES" translatesAutoresizingMaskIntoConstraints="NO" id="jZ2-Jd-IZC">
                                         <rect key="frame" x="0.0" y="0.0" width="414" height="637"/>
@@ -40,7 +41,7 @@
                                                                 <rect key="frame" x="16" y="16" width="350" height="194.5"/>
                                                                 <subviews>
                                                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="UWD-qN-CWp">
-                                                                        <rect key="frame" x="0.0" y="-1" width="350" height="21"/>
+                                                                        <rect key="frame" x="0.0" y="-0.5" width="350" height="21"/>
                                                                         <imageReference key="image" image="cloud.fill" catalog="system" symbolScale="large"/>
                                                                         <preferredSymbolConfiguration key="preferredSymbolConfiguration" scale="large"/>
                                                                     </imageView>
@@ -195,11 +196,11 @@
             <objects>
                 <viewController id="c0W-Ti-tch" customClass="LoginViewController" customModule="FIDO2App" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="mrN-w5-GsF">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="838"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="32" translatesAutoresizingMaskIntoConstraints="NO" id="2De-ce-GhE">
-                                <rect key="frame" x="24" y="92" width="272" height="516"/>
+                                <rect key="frame" x="24" y="96" width="272" height="516"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="16" translatesAutoresizingMaskIntoConstraints="NO" id="lem-vW-tgl">
                                         <rect key="frame" x="0.0" y="0.0" width="272" height="152.5"/>
@@ -287,7 +288,7 @@
                                 </subviews>
                             </stackView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="oWP-lZ-2j1">
-                                <rect key="frame" x="24" y="782" width="42" height="48"/>
+                                <rect key="frame" x="24" y="778" width="42" height="48"/>
                                 <color key="backgroundColor" name="AccentColor"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="48" id="urB-vN-lnP"/>
@@ -331,11 +332,11 @@
             <objects>
                 <viewController id="aey-lv-Jf0" customClass="WhoAmIViewController" customModule="FIDO2App" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="706-KE-0Iu">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="838"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="32" translatesAutoresizingMaskIntoConstraints="NO" id="Zgu-SS-AGe">
-                                <rect key="frame" x="24" y="92" width="272" height="384.5"/>
+                                <rect key="frame" x="24" y="96" width="272" height="384.5"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="16" translatesAutoresizingMaskIntoConstraints="NO" id="uBe-HQ-nJx">
                                         <rect key="frame" x="0.0" y="0.0" width="272" height="135"/>
@@ -364,7 +365,7 @@
                                                 <color key="textColor" systemColor="systemGrayColor"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
-                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Cloud tenant URL" textAlignment="natural" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="p5U-Q0-loq">
+                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="On-premise tenant URL" textAlignment="natural" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="p5U-Q0-loq">
                                                 <rect key="frame" x="0.0" y="30" width="272" height="103.5"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                 <textInputTraits key="textInputTraits" returnKeyType="done" textContentType="url"/>
@@ -392,7 +393,7 @@
                                 </subviews>
                             </stackView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="U6f-F4-6ow">
-                                <rect key="frame" x="24" y="782" width="74" height="48"/>
+                                <rect key="frame" x="24" y="778" width="74" height="48"/>
                                 <color key="backgroundColor" name="AccentColor"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="48" id="PJm-j9-K8Q"/>
@@ -434,11 +435,11 @@
             <objects>
                 <viewController id="BYZ-38-t0r" customClass="AttestationViewController" customModule="FIDO2App" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="838"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="32" translatesAutoresizingMaskIntoConstraints="NO" id="j7Z-0L-m8Q">
-                                <rect key="frame" x="24" y="92" width="366" height="205"/>
+                                <rect key="frame" x="24" y="96" width="366" height="205"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="16" translatesAutoresizingMaskIntoConstraints="NO" id="Mwi-CE-5bL">
                                         <rect key="frame" x="0.0" y="0.0" width="366" height="81"/>
@@ -493,7 +494,7 @@
                                 </subviews>
                             </stackView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wOb-ka-bf6">
-                                <rect key="frame" x="24" y="782" width="366" height="48"/>
+                                <rect key="frame" x="24" y="778" width="366" height="48"/>
                                 <color key="backgroundColor" systemColor="systemBlueColor"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="48" id="axH-No-GgE"/>
@@ -535,11 +536,11 @@
             <objects>
                 <viewController id="suh-RP-bpp" customClass="AttestationInfoViewController" customModule="FIDO2App" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="j57-6S-GHc">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="838"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="32" translatesAutoresizingMaskIntoConstraints="NO" id="EMT-h8-q7T">
-                                <rect key="frame" x="24" y="92" width="366" height="165"/>
+                                <rect key="frame" x="24" y="96" width="366" height="165"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="16" translatesAutoresizingMaskIntoConstraints="NO" id="qGs-4e-dGc" userLabel="Stack Title">
                                         <rect key="frame" x="0.0" y="0.0" width="366" height="81"/>
@@ -576,7 +577,7 @@
                                 </subviews>
                             </stackView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="n1w-eu-pMA">
-                                <rect key="frame" x="24" y="722" width="366" height="48"/>
+                                <rect key="frame" x="24" y="718" width="366" height="48"/>
                                 <color key="backgroundColor" systemColor="systemBlueColor"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="48" id="6Xz-IY-8le"/>
@@ -591,7 +592,7 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="O5F-70-3eK">
-                                <rect key="frame" x="24" y="782" width="366" height="48"/>
+                                <rect key="frame" x="24" y="778" width="366" height="48"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="48" id="eu0-GZ-osm"/>
                                 </constraints>
@@ -670,7 +671,7 @@
                                 </connections>
                             </button>
                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ur6-ja-Nft">
-                                <rect key="frame" x="0.0" y="44" width="414" height="666"/>
+                                <rect key="frame" x="0.0" y="48" width="414" height="662"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="16" translatesAutoresizingMaskIntoConstraints="NO" id="Et6-2R-EW5">
                                         <rect key="frame" x="20" y="48" width="374" height="440"/>
@@ -823,11 +824,11 @@
             <objects>
                 <viewController id="Vjz-gM-NVA" customClass="AssertionInfoViewController" customModule="FIDO2App" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="H0j-vz-glC">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="838"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="32" translatesAutoresizingMaskIntoConstraints="NO" id="WKl-K4-KUJ">
-                                <rect key="frame" x="24" y="92" width="366" height="100.5"/>
+                                <rect key="frame" x="24" y="96" width="366" height="100.5"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="16" translatesAutoresizingMaskIntoConstraints="NO" id="PGD-Na-Lyc">
                                         <rect key="frame" x="0.0" y="0.0" width="366" height="100.5"/>
@@ -852,7 +853,7 @@
                                 </subviews>
                             </stackView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Z0P-Ai-w75">
-                                <rect key="frame" x="24" y="782" width="366" height="48"/>
+                                <rect key="frame" x="24" y="778" width="366" height="48"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="48" id="Kwv-To-bdh"/>
                                 </constraints>
@@ -865,7 +866,7 @@
                                 </connections>
                             </button>
                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="bCg-eK-y2z">
-                                <rect key="frame" x="24" y="204.5" width="378" height="565.5"/>
+                                <rect key="frame" x="24" y="208.5" width="378" height="557.5"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="32" translatesAutoresizingMaskIntoConstraints="NO" id="22I-U7-4CL">
                                         <rect key="frame" x="0.0" y="0.0" width="378" height="667"/>
@@ -915,12 +916,12 @@
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="mF7-21-tZT"/>
+        <segue reference="UP4-6B-a9j"/>
     </inferredMetricsTieBreakers>
     <resources>
-        <image name="building.2.fill" catalog="system" width="128" height="106"/>
-        <image name="cloud.fill" catalog="system" width="128" height="88"/>
-        <image name="lock.shield" catalog="system" width="128" height="118"/>
+        <image name="building.2.fill" catalog="system" width="128" height="108"/>
+        <image name="cloud.fill" catalog="system" width="128" height="87"/>
+        <image name="lock.shield" catalog="system" width="128" height="119"/>
         <namedColor name="AccentColor">
             <color red="0.0" green="0.46000000000000002" blue="0.89000000000000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
