Add transport support for Webauthn specification 3. https://www.w3.org/TR/webauthn-3/#enum-transport

--- a/Examples/fido2/Sources/Base.lproj/Main.storyboard
+++ b/Examples/fido2/Sources/Base.lproj/Main.storyboard
@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21507" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="l9G-bJ-S1B">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="22505" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="l9G-bJ-S1B">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21505"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22504"/>
         <capability name="Image references" minToolsVersion="12.0"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
@@ -102,7 +101,7 @@
                                                                 <rect key="frame" x="16" y="16" width="350" height="194.5"/>
                                                                 <subviews>
                                                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="NG0-gv-J6Y">
-                                                                        <rect key="frame" x="0.0" y="-3.5" width="350" height="27"/>
+                                                                        <rect key="frame" x="0.0" y="-5" width="350" height="29.5"/>
                                                                         <imageReference key="image" image="building.2.fill" catalog="system" symbolScale="large"/>
                                                                         <preferredSymbolConfiguration key="preferredSymbolConfiguration" scale="medium"/>
                                                                     </imageView>
@@ -196,11 +195,11 @@
             <objects>
                 <viewController id="c0W-Ti-tch" customClass="LoginViewController" customModule="FIDO2App" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="mrN-w5-GsF">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="838"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="886"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="32" translatesAutoresizingMaskIntoConstraints="NO" id="2De-ce-GhE">
-                                <rect key="frame" x="24" y="96" width="272" height="516"/>
+                                <rect key="frame" x="24" y="48" width="272" height="516"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="16" translatesAutoresizingMaskIntoConstraints="NO" id="lem-vW-tgl">
                                         <rect key="frame" x="0.0" y="0.0" width="272" height="152.5"/>
@@ -288,7 +287,7 @@
                                 </subviews>
                             </stackView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="oWP-lZ-2j1">
-                                <rect key="frame" x="24" y="778" width="42" height="48"/>
+                                <rect key="frame" x="24" y="826" width="42" height="48"/>
                                 <color key="backgroundColor" name="AccentColor"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="48" id="urB-vN-lnP"/>
@@ -332,11 +331,11 @@
             <objects>
                 <viewController id="aey-lv-Jf0" customClass="WhoAmIViewController" customModule="FIDO2App" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="706-KE-0Iu">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="838"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="886"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="32" translatesAutoresizingMaskIntoConstraints="NO" id="Zgu-SS-AGe">
-                                <rect key="frame" x="24" y="96" width="272" height="384.5"/>
+                                <rect key="frame" x="24" y="48" width="272" height="384.5"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="16" translatesAutoresizingMaskIntoConstraints="NO" id="uBe-HQ-nJx">
                                         <rect key="frame" x="0.0" y="0.0" width="272" height="135"/>
@@ -382,7 +381,7 @@
                                                 <color key="textColor" systemColor="systemGrayColor"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
-                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Client id" textAlignment="natural" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="KfB-3k-q1h">
+                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Access token" textAlignment="natural" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="KfB-3k-q1h">
                                                 <rect key="frame" x="0.0" y="30" width="272" height="22"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                 <textInputTraits key="textInputTraits" autocorrectionType="no" returnKeyType="done"/>
@@ -393,7 +392,7 @@
                                 </subviews>
                             </stackView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="U6f-F4-6ow">
-                                <rect key="frame" x="24" y="778" width="74" height="48"/>
+                                <rect key="frame" x="24" y="826" width="74" height="48"/>
                                 <color key="backgroundColor" name="AccentColor"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="48" id="PJm-j9-K8Q"/>
@@ -435,11 +434,11 @@
             <objects>
                 <viewController id="BYZ-38-t0r" customClass="AttestationViewController" customModule="FIDO2App" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="838"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="886"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="32" translatesAutoresizingMaskIntoConstraints="NO" id="j7Z-0L-m8Q">
-                                <rect key="frame" x="24" y="96" width="366" height="205"/>
+                                <rect key="frame" x="24" y="48" width="366" height="205"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="16" translatesAutoresizingMaskIntoConstraints="NO" id="Mwi-CE-5bL">
                                         <rect key="frame" x="0.0" y="0.0" width="366" height="81"/>
@@ -494,7 +493,7 @@
                                 </subviews>
                             </stackView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wOb-ka-bf6">
-                                <rect key="frame" x="24" y="778" width="366" height="48"/>
+                                <rect key="frame" x="24" y="826" width="366" height="48"/>
                                 <color key="backgroundColor" systemColor="systemBlueColor"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="48" id="axH-No-GgE"/>
@@ -536,11 +535,11 @@
             <objects>
                 <viewController id="suh-RP-bpp" customClass="AttestationInfoViewController" customModule="FIDO2App" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="j57-6S-GHc">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="838"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="886"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="32" translatesAutoresizingMaskIntoConstraints="NO" id="EMT-h8-q7T">
-                                <rect key="frame" x="24" y="96" width="366" height="165"/>
+                                <rect key="frame" x="24" y="48" width="366" height="165"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="16" translatesAutoresizingMaskIntoConstraints="NO" id="qGs-4e-dGc" userLabel="Stack Title">
                                         <rect key="frame" x="0.0" y="0.0" width="366" height="81"/>
@@ -577,7 +576,7 @@
                                 </subviews>
                             </stackView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="n1w-eu-pMA">
-                                <rect key="frame" x="24" y="718" width="366" height="48"/>
+                                <rect key="frame" x="24" y="766" width="366" height="48"/>
                                 <color key="backgroundColor" systemColor="systemBlueColor"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="48" id="6Xz-IY-8le"/>
@@ -592,7 +591,7 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="O5F-70-3eK">
-                                <rect key="frame" x="24" y="778" width="366" height="48"/>
+                                <rect key="frame" x="24" y="826" width="366" height="48"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="48" id="eu0-GZ-osm"/>
                                 </constraints>
@@ -780,6 +779,7 @@
                                     </stackView>
                                 </subviews>
                                 <constraints>
+                                    <constraint firstItem="Et6-2R-EW5" firstAttribute="width" secondItem="ur6-ja-Nft" secondAttribute="width" constant="-40" id="2qs-1D-T6r"/>
                                     <constraint firstItem="Et6-2R-EW5" firstAttribute="trailing" secondItem="ur6-ja-Nft" secondAttribute="trailing" id="D9P-y9-bvb"/>
                                     <constraint firstItem="Et6-2R-EW5" firstAttribute="leading" secondItem="ur6-ja-Nft" secondAttribute="leading" constant="20" id="Gnd-7t-Sd7"/>
                                     <constraint firstAttribute="bottom" secondItem="Et6-2R-EW5" secondAttribute="bottom" id="k1Z-yb-YYQ"/>
@@ -790,7 +790,6 @@
                         <viewLayoutGuide key="safeArea" id="bF9-KY-7pY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="Et6-2R-EW5" firstAttribute="width" secondItem="ur6-ja-Nft" secondAttribute="width" constant="-40" id="2qs-1D-T6r"/>
                             <constraint firstItem="bF9-KY-7pY" firstAttribute="trailing" secondItem="7ie-5w-bdM" secondAttribute="trailing" constant="20" id="ESU-Zc-oIw"/>
                             <constraint firstItem="bF9-KY-7pY" firstAttribute="trailing" secondItem="umC-Er-JXn" secondAttribute="trailing" constant="20" id="I2f-Be-BpB"/>
                             <constraint firstItem="umC-Er-JXn" firstAttribute="top" secondItem="7ie-5w-bdM" secondAttribute="bottom" constant="12" id="Inm-Da-evZ"/>
@@ -824,11 +823,11 @@
             <objects>
                 <viewController id="Vjz-gM-NVA" customClass="AssertionInfoViewController" customModule="FIDO2App" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="H0j-vz-glC">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="838"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="886"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="32" translatesAutoresizingMaskIntoConstraints="NO" id="WKl-K4-KUJ">
-                                <rect key="frame" x="24" y="96" width="366" height="100.5"/>
+                                <rect key="frame" x="24" y="48" width="366" height="100.5"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="16" translatesAutoresizingMaskIntoConstraints="NO" id="PGD-Na-Lyc">
                                         <rect key="frame" x="0.0" y="0.0" width="366" height="100.5"/>
@@ -853,7 +852,7 @@
                                 </subviews>
                             </stackView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Z0P-Ai-w75">
-                                <rect key="frame" x="24" y="778" width="366" height="48"/>
+                                <rect key="frame" x="24" y="826" width="366" height="48"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="48" id="Kwv-To-bdh"/>
                                 </constraints>
@@ -866,7 +865,7 @@
                                 </connections>
                             </button>
                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="bCg-eK-y2z">
-                                <rect key="frame" x="24" y="208.5" width="378" height="557.5"/>
+                                <rect key="frame" x="24" y="160.5" width="378" height="653.5"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="32" translatesAutoresizingMaskIntoConstraints="NO" id="22I-U7-4CL">
                                         <rect key="frame" x="0.0" y="0.0" width="378" height="667"/>
@@ -919,7 +918,7 @@
         <segue reference="UP4-6B-a9j"/>
     </inferredMetricsTieBreakers>
     <resources>
-        <image name="building.2.fill" catalog="system" width="128" height="108"/>
+        <image name="building.2.fill" catalog="system" width="128" height="117"/>
         <image name="cloud.fill" catalog="system" width="128" height="87"/>
         <image name="lock.shield" catalog="system" width="128" height="119"/>
         <namedColor name="AccentColor">
